UsableK8SDeploymentWithContainerd/K8SDeployment/nvidiaDevicePlugin/det.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-pod
spec:
  nodeSelector:
    gpu: "true"
  restartPolicy: Never
  containers:
    - name: det
      image: docker.io/luoxiao23333/task_det:v0
      command: ["/bin/bash", "-c", "--"]
      args: ["while true; do sleep 30; done;"]
      resources:
        limits:
          nvidia.com/gpu: 1 # requesting 1 GPU
  tolerations:
  - key: nvidia.com/gpu
    operator: Exists
    effect: NoSchedule
