UsableK8SDeploymentWithContainerd/K8SDeployment/nvidiaDevicePlugin/test-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-pod
  #annotations:
    #tencent.com/vcuda-core-limit: "1"
spec:
  nodeSelector:
     #nvidia-device-enable: "enable"
     gpu: "true"
  restartPolicy: Never
  containers:
    - name: cuda-container
      image: nvcr.io/nvidia/k8s/cuda-sample:vectoradd-cuda10.2
      resources:
        limits:
          nvidia.com/gpu: 6 # requesting 1 GPU
          #tencent.com/vcuda-core: 1
  tolerations:
  - key: nvidia.com/gpu
    operator: Exists
    effect: NoSchedule
